<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue2"

    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="9dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/corn1"
            android:orientation="vertical"
            app:layout_constraintCircleRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="136dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/pink"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/Category"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView

                    android:id="@+id/serdechka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="-14dp"
                    android:layout_marginEnd="-5dp"
                    android:src="@drawable/ic_like"


                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="10dp"
                    android:text="@string/Explore"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="0dp"
                    android:text="@string/Free"
                    android:textColor="@color/black"
                    android:textSize="27dp"
                    android:textStyle="bold"

                    />

                <ImageView

                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:padding="0dp"
                    android:src="@drawable/ic_onee" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="4dp"
                    android:padding="0dp"
                    android:src="@drawable/ic_2" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="4dp"
                    android:src="@drawable/ic_3" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_4" />

                <Button

                    android:id="@+id/gradient"
                    android:layout_width="99dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/gradient"
                    android:padding="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="70dp"
                    android:text="@string/Participants"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="21dp"
                    android:text="@string/Accessibility"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="@drawable/but_knopka"
                android:text="@string/Next"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Category"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/price1"
                android:textColor="@color/white"
                android:textSize="18dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:layout_width="158dp"
                android:layout_height="81dp"
                android:drawableEnd="@drawable/ic_to"
                android:paddingStart="20dp"
                android:paddingBottom="17dp"
                android:text="Type"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="normal" />

            <com.google.android.material.slider.RangeSlider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="100"
                app:values="@array/rangeSlider"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="10dp"
                android:text="@string/Accessibility"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.slider.RangeSlider
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:valueFrom="0"
                android:valueTo="100"
                app:values="@array/rangeSlider" />

        </LinearLayout>

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Result"
            android:textColor="@color/white"
            android:textSize="24sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>